@@ -365,7 +365,7 @@ namespace Castle.ActiveRecord.Tests
 		}
 
 		[Test]
-		public void ProjectionQueryTest()
+		public void ScalarProjectionQueryTest()
 		{
 			Blog blog = new Blog();
 			blog.Name = "hammett's blog";
@@ -377,6 +377,38 @@ namespace Castle.ActiveRecord.Tests
 			Assert.AreEqual(1, rowCount);
 		}
 
+
+		[Test]
+		public void UnTypedProjectionQueryTest()
+		{
+			Blog blog = new Blog();
+			blog.Name = "hammett's blog";
+			blog.Author = "hamilton verissimo";
+			blog.Save();
+
+			ProjectionQuery<Blog> proj = new ProjectionQuery<Blog>(Projections.Property("Name"), Projections.Property("Author"));
+			IList<object[]> results = proj.Execute();
+			Assert.AreEqual(blog.Name, results[0][0]);
+			Assert.AreEqual(blog.Author, results[0][1]);
+		}
+
+
+		[Test]
+		public void TypedProjectionQueryTest()
+		{
+			Blog blog = new Blog();
+			blog.Name = "hammett's blog";
+			blog.Author = "hamilton verissimo";
+			blog.Save();
+
+			ProjectionQuery<Blog, KeyValuePair<string, string>> proj = new ProjectionQuery<Blog, KeyValuePair<string, string>>(
+				Projections.Property("Name"), Projections.Property("Author"));
+			IList<KeyValuePair<string, string>> results = proj.Execute();
+			Assert.AreEqual(blog.Name, results[0].Key);
+			Assert.AreEqual(blog.Author, results[0].Value);
+		}
+		
+		
 		[Test]
 		public void UseBlogWithGenericPostCollection()
 		{
